--- a/src/style.scss
+++ b/src/style.scss
@@ -19,15 +19,12 @@ body {
   font-size: 1.2em;
   font-weight: 400;
 
-  // color-scheme: light dark;
-
-  color: rgb(19, 181, 43);
-
   --cw-primary-rgb: 19, 181, 43;
-  // --cw-primary-rgb: 68, 248, 94;
   --cw-onprimary-rgb: 255, 255 255;
   --cw-surface-rgb: 250, 250, 250;
   --cw-onsurface-rgb: 16, 16, 16;
+
+  --cw-sidenav-width: 24em;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -45,15 +42,47 @@ body {
 }
 
 #app {
-  height: 100%;
-}
-
-main {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
   height: 100%;
+  width: 100%;
+  overflow: hidden;
+
+  > aside {
+    min-width: var(--cw-sidenav-width);
+    
+    max-height: 100vh;
+    overflow-x: auto;
+    color: #f9f9f9;
+    // padding: 2em;
+
+    transition: margin 400ms ease-in-out;
+
+    margin-left: 0;
+
+    &.is-open {
+      margin-left: calc(-420px - 2em);
+
+      & + main {
+        // min-width: 100%;
+      }
+    }
+  }
+
+  > main {
+    flex: 1;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+
+  > aside,
+  > main {
+    height: 100vh;
+  }
 }
 
 canvas {
@@ -63,6 +92,13 @@ canvas {
   overflow: hidden;
 }
 
+.cw-sidenav-toggle {
+  position: absolute;
+  top: 1.5em;
+  left: 1em;
+  z-index: 1;
+
+}
 .cw-theme-toggle {
   position: fixed;
   top: 1.5em;
@@ -76,8 +112,10 @@ canvas {
     linear-gradient(135deg, #ccc 25%, transparent 25%),
     linear-gradient(45deg, transparent 75%, #ccc 75%),
     linear-gradient(135deg, transparent 75%, #ccc 75%);
-  background-size: 40px 40px; /* Tamanho dos quadrados */
-  background-position: 0 0, 20px 0, 20px -20px, 0px 20px; /* Posicionamento dos quadrados */
+  /* Tamanho dos quadrados */
+  background-size: 40px 40px;
+  /* Posicionamento dos quadrados */
+  background-position: 0 0, 20px 0, 20px -20px, 0px 20px;
 }
 
 .form-group {
